clusters/k3s/apps/vaultwarden/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: ghcr.io/dani-garcia/vaultwarden:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: vaultwarden-storage

      volumes:
        - name: vaultwarden-storage
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
