clusters/k3s/apps/vaultwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress

spec:
  rules:
  - host: vault.devcw.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80

  tls:
  - hosts:
    - vault.devcw.xyz
  ingressClassName: traefik
